[TR] add HFP nohands description

--- a/HFP/README
+++ b/HFP/README
@@ -1,1 +1,23 @@
 clone from https://github.com/ptesarik/hfp
+or https://github.com/heinervdm/nohands
+
+
+1)nohands hfp is no related to bluetoothd !!!!
+2)It use the lower HCI api to contact with kernel.
+
+------------------------------[python GUI]--------------------------------
+                                   ||
+                                   ||
+                                   ||
+------------------[hfpd daemon based on dbus system]---------         ---------------------------[Qt GUI]----------------------------
+                                       ||                                                          ||
+                                       ||                                                          ||
+--------------------------------------------[hfp.cpp]-----------------------------------------------------------------
+                                       ||                                             |
+                               ||                                                     |
+-------------[bt.cpp]----------------------------                                   [audio]
+                ||                                                                    |
+                ||                                                                    |
+                ||                                                                    |
+-------------------------------------------------KERNEL----------------------------------------------------------------------------
+             [HCI OPS]                                              [socket]                    [alsa]
